# devfd

./: Cargo.toml  Rocket.toml  shell.nix
migrations/: 20221218165303_init.sql
src/: main.rs
